Fix footer buttons on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -140,6 +140,10 @@ footer {
 
     a {
       color: #333;
+
+      @media screen and (max-width: 600px) {
+        margin-left: 8px;
+      }
     }
   }
 }
